--- a/index.html
+++ b/index.html
@@ -161,5 +161,8 @@
                 </a>
             </ul>
         </footer>
+        <div class="box-container">
+        <div class="box"><img src="shazam-removebg-preview.png" alt=""></div>
+        </div>
 </body>
 </html>
