estilos en tarjetas(aún no hacemos uso del diseño resposivo)

--- a/index.html
+++ b/index.html
@@ -22,6 +22,38 @@
             <li>Ayuda</li>
         </ul>
     </header>
+    <div class="intrument-container">
+        <div class="big-card">
+            <h1>Los instrumentos de tus artistas favoritos</h1>
+            <div class="big-card-image-container">
+                <img src="https://media.wired.com/photos/657b7c354a7878a7ab900a9e/master/pass/guitar-science-GettyImages-1460054526.jpg" alt="big-card-image">
+            </div>
+        </div>
+        <div class="small-card">
+            <div class="small-card-icon-container">
+                <img src="https://www.svgrepo.com/show/20201/electric-guitar.svg" alt="small-card-icon">
+            </div>
+            <h2>Investiga sobre tus instrumentos</h2>
+        </div>
+        <div class="small-card">
+            <div class="small-card-icon-container">
+                <img src="https://www.svgrepo.com/show/20201/electric-guitar.svg" alt="small-card-icon">
+            </div>
+            <h2>Investiga sobre tus instrumentos</h2>
+        </div>
+        <div class="small-card">
+            <div class="small-card-icon-container">
+                <img src="https://www.svgrepo.com/show/20201/electric-guitar.svg" alt="small-card-icon">
+            </div>
+            <h2>Investiga sobre tus instrumentos</h2>
+        </div>
+        <div class="small-card">
+            <div class="small-card-icon-container">
+                <img src="https://www.svgrepo.com/show/20201/electric-guitar.svg" alt="small-card-icon">
+            </div>
+            <h2>Investiga sobre tus instrumentos</h2>
+        </div>
+    </div>
     <div class="genders-container">
         <h1>Todos los generos que te imagines</h1>
         <div class="gender-card">
