--- a/index.html
+++ b/index.html
@@ -24,72 +24,73 @@
     </header>
     <div class="intrument-container">
         <div class="big-card">
-            <h1>Los instrumentos de tus artistas favoritos</h1>
+            <h1> Billboard Music Awards 2024</h1>
             <div class="big-card-image-container">
-                <img src="https://media.wired.com/photos/657b7c354a7878a7ab900a9e/master/pass/guitar-science-GettyImages-1460054526.jpg" alt="big-card-image">
+                <img src="https://th.bing.com/th/id/OIF.xhdtV7Gq7GEdAKqe6ucXag?rs=1&pid=ImgDetMain" alt="big-card-image">
             </div>
         </div>
         <div class="small-card">
             <div class="small-card-icon-container">
                 <img src="https://www.svgrepo.com/show/20201/electric-guitar.svg" alt="small-card-icon">
             </div>
-            <h2>Investiga sobre tus instrumentos</h2>
+            <h2>Billie Eilish</h2>
         </div>
         <div class="small-card">
             <div class="small-card-icon-container">
                 <img src="https://www.svgrepo.com/show/20201/electric-guitar.svg" alt="small-card-icon">
             </div>
-            <h2>Investiga sobre tus instrumentos</h2>
+            <h2>Taylor Swift</h2>
         </div>
         <div class="small-card">
             <div class="small-card-icon-container">
                 <img src="https://www.svgrepo.com/show/20201/electric-guitar.svg" alt="small-card-icon">
             </div>
-            <h2>Investiga sobre tus instrumentos</h2>
+            <h2>Karol G</h2>
         </div>
         <div class="small-card">
             <div class="small-card-icon-container">
                 <img src="https://www.svgrepo.com/show/20201/electric-guitar.svg" alt="small-card-icon">
             </div>
-            <h2>Investiga sobre tus instrumentos</h2>
+            <h2>Luis Miguel</h2>
         </div>
     </div>
     <div class="genders-container">
-        <h1>Todos los generos que te imagines</h1>
+        <h1>Generos musicales</h1>
         <div class="gender-card">
             <div class="info-gender-card">
-                <h1>Indie Rock</h1>
+                <h1>Reguetón</h1>
                 <div class="icon-gender-container">
                     <img src="https://th.bing.com/th/id/R.5c065a10f3bd6805effd71c94075abf4?rik=v4oLsbU7BPeYCg&riu=http%3a%2f%2fpngimg.com%2fuploads%2fmusic_notes%2fmusic_notes_PNG49.png&ehk=QRjGYRRSx%2b%2bhVpYwAm9xZNtDX0uNYXOzatTUHf2Q%2bNo%3d&risl=&pid=ImgRaw&r=0" alt="gender-image">
                 </div>
             </div>
             <div class="image-gender-container">
-                <img src="https://th.bing.com/th/id/OIP.zOpMf8JZ75rvTSAC4hHcrQHaHa?rs=1&pid=ImgDetMain" alt="gender_image">
+                <img src="https://th.bing.com/th/id/OIP.yDbzhc4yE7HLO7MOWqVxwQAAAA?rs=1&pid=ImgDetMain" alt="gender_image">
             </div>
         </div>
         <div class="gender-card">
             <div class="info-gender-card">
-                <h1>Indie Rock</h1>
+                <h1>Metal</h1>
                 <div class="icon-gender-container">
                     <img src="https://th.bing.com/th/id/R.5c065a10f3bd6805effd71c94075abf4?rik=v4oLsbU7BPeYCg&riu=http%3a%2f%2fpngimg.com%2fuploads%2fmusic_notes%2fmusic_notes_PNG49.png&ehk=QRjGYRRSx%2b%2bhVpYwAm9xZNtDX0uNYXOzatTUHf2Q%2bNo%3d&risl=&pid=ImgRaw&r=0" alt="gender-image">
                 </div>
             </div>
             <div class="image-gender-container">
-                <img src="https://th.bing.com/th/id/OIP.zOpMf8JZ75rvTSAC4hHcrQHaHa?rs=1&pid=ImgDetMain" alt="gender_image">
+                <img src="https://th.bing.com/th/id/OIP.Zw8G3abUJFsSak3ZRsWlrgHaE9?rs=1&pid=ImgDetMain" alt="gender_image">
             </div>
         </div>
         <div class="gender-card">
             <div class="info-gender-card">
-                <h1>Indie Rock</h1>
+                <h1>Rap y Hip Hop</h1>
                 <div class="icon-gender-container">
                     <img src="https://th.bing.com/th/id/R.5c065a10f3bd6805effd71c94075abf4?rik=v4oLsbU7BPeYCg&riu=http%3a%2f%2fpngimg.com%2fuploads%2fmusic_notes%2fmusic_notes_PNG49.png&ehk=QRjGYRRSx%2b%2bhVpYwAm9xZNtDX0uNYXOzatTUHf2Q%2bNo%3d&risl=&pid=ImgRaw&r=0" alt="gender-image">
                 </div>
             </div>
             <div class="image-gender-container">
-                <img src="https://th.bing.com/th/id/OIP.zOpMf8JZ75rvTSAC4hHcrQHaHa?rs=1&pid=ImgDetMain" alt="gender_image">
+                <img src="https://th.bing.com/th/id/OIP.uNte3wVSQyUR4Eg0HwVkaQHaDW?rs=1&pid=ImgDetMain" alt="gender_image">
             </div>
         </div>
     </div>
+
     <div class="cards-container">
         <div class="card">
             <div class="card-image-container">
